2000-08-29  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* m68hc11-tdep.c (stack_correction): New variable for stack offset
	correction (1 for 68hc11, 0 for 68hc12).
	(m68hc11_saved_pc_after_call): Use it.
	(m68hc11_frame_chain): Likewise.
	(m68hc11_frame_init_saved_regs): Likewise.
	(m68hc11_init_extra_frame_info): Likewise.
	(m68hc11_push_return_address): Likewise.
	(m68hc11_push_arguments): Struct address must be corrected by
	applying the stack_correction offset.
	(m68hc11_store_struct_return): Likewise.

2000-08-28  Kevin Buettner  <kevinb@redhat.com>

	* gdbserver/utils.c (error, fatal): Protoize.

2000-08-27  Mark Kettenis  <kettenis@gnu.org>

	* i386-linux-nat.c (fetch_inferior_registers): Move call to
	dummy_sse_values ...
	(supply_fpregset): ... here.

2000-08-27  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* pa64solib.c (pa64_solib_load_symbols): Don't use ANOFFSET as an
 	lvalue.
	* xcoffread.c (xcoff_symfile_offsets): Ditto
	* somsolib.c (som_solib_section_offsets): Ditto.
	* somread.c (som_symfile_offsets): Ditto.
	* rs6000-nat.c (vmap_symtab): Ditto.
	* remote-vx.c (vx_add_symbols): Ditto.
	* remote-os9k.c (rombug_wait): Ditto.

2000-08-27  Mark Kettenis  <kettenis@gnu.org>

	* gregset.h: Protect against multiple inclusion.  Remove some
	redundant spaces.

Sun Aug 27 00:00:04 2000  Christopher Faylor <cgf@cygnus.com>

	* win32-nat.c (dll_symbol_command): Tack a .dll on the end of a
	supplied argument if it is missing an extension.

2000-08-24  Egor Duda <deo@logos-m.ru>

	* corelow.c: Define O_BINARY if it isn't defined.
	(core_open): Open core file in binary mode.
	* config/i386/tm-cygwin.h (child_clear_solibs): Rename from
	child_clear_solib.
	* config/i386/cygwin.mh: Add dependency from corelow.o.
	* win32-nat.c (register_loaded_dll): New function.  Add dll to the list
	of currently loaded dlls.
	(handle_load_dll): Use register_loaded_dll.
	(child_solib_add): Distinguish between active process and core targets.